# Interceptor

./: .gitattributes
interceptor_ws/: setup_gz.zsh
interceptor_ws/src/ars408_interfaces/: CMakeLists.txt  README.md  package.xml
interceptor_ws/src/ars408_radar/: README.md  package.xml  setup.cfg  setup.py
interceptor_ws/src/ars408_radar/ars408_radar/: ars408_radar_node.py  ars408_radar_node_utils.py  ars408_rviz.py
interceptor_ws/src/ars408_radar/ars408_radar/radar_lib/: decoders.py  filters_cfgs.py  main.py  plot_radar.py  process_format.py  radar.py  radar_instruction.txt  senders.py
interceptor_ws/src/ars408_radar/config/: filters.yaml  radar_cfg.yaml
interceptor_ws/src/ars408_radar/launch/: radar_launch.py
interceptor_ws/src/ctrl_pid/: README.md  package.xml  setup.cfg  setup.py
interceptor_ws/src/gz2ros/: package.xml  setup.cfg  setup.py
interceptor_ws/src/gz_sim_one/: CMakeLists.txt  README.md  package.xml
interceptor_ws/src/gz_sim_one/models/: model_interceptor.urdf  model_target.urdf  python_spawn.py
interceptor_ws/src/gz_sim_one/models/monodrone_1800_one/: model.config  model.sdf
interceptor_ws/src/gz_sim_one/models/monodrone_1800_one/meshes/: collider.dae
interceptor_ws/src/gz_sim_one/models/monodrone_1800_one_target/: model.config  model.sdf
interceptor_ws/src/gz_sim_one/models/monodrone_1800_one_target/meshes/: visual.dae
interceptor_ws/src/gz_sim_one/urdf/: monodrone_interceptor.urdf  monodrone_target.urdf
interceptor_ws/src/gz_sim_one/worlds/: interceptor_sim_one.sdf  own_waves.sdf
interceptor_ws/src/simple_fusion_radar_cam/: README.md  package.xml  setup.cfg  setup.py
(+26 files in other folders)
