<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars408_radar</name>
  <version>1.0.0</version>
  <description>ars408 minimal ros2 pkg</description>
  <maintainer email="mathis.le_scoezec@ensta.fr">mls</maintainer>
  <license>c cado</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ars408_interfaces</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
